FIX: Prevent 'Request-URI Too Long' error in !list special search from expired resources notification and tidy up message formatting. [t35634]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@24374 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -1435,6 +1435,12 @@ div.video-js {margin:auto;}
     margin-bottom: 10px;
     }
 
+#modal_dialog .MessageText ul{
+    padding-top: 1em;
+    padding-bottom: 0px;
+    list-style-type: none;
+    }
+
 #modal .TopInpageNav {
     margin: 0;
     padding: 0 20px 10px 5px;
